test/libyul/yulSyntaxTests/name_clash_function_var_subscope.yul
{
	function g() {
		let g := 0
	}
}
// ----
// DeclarationError 1395: (20-30): Variable name g already taken in this scope.
